メッセージアーキテクチャのリファレンス実装を行った

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,121 +1,159 @@
 #エラーID(共通)
-NotEmptyError = Not Empty Error
-EmptyError = Empty Error
-DateReverseError = Date Reverse Error
-ArgumentNullErrorMomEmployeeId = Argument Null Error MomEmployeeId
-ArgumentNullErrorMclMomKjbId = Argument Null Error MclMomKjbId
-ArgumentNullErrorOriginalSystemCode = Argument Null Error OriginalSystemCode
-MasterDoesNotExistEmployeeMaster = Master Does Not Exist EmployeeMaster
-MasterDoesNotExistKjbMaster = Master Does Not Exist KjbMaster
-MasterDoesNotExistBillingCustomerMaster = Master Does Not Exist BillingCustomerMaster
+NotEmptyError.ID = ROT00001
+NotEmptyError.TYPE = Error
+NotEmptyError.MSG = が未設定です。
+EmptyError.ID = ROT00002
+EmptyError.TYPE = Error
+EmptyError.MSG = が設定されています。
+DateReverseError.ID = ROT00003
+DateReverseError.TYPE = Error
+DateReverseError.MSG = {0}以降の日付が{1}に設定されています。
+ArgumentNullErrorMomEmployeeId.ID = ROT00004
+ArgumentNullErrorMomEmployeeId.TYPE = Error
+ArgumentNullErrorMomEmployeeId.MSG = {0}のMoM社員が未設定です。
+ArgumentNullErrorMclMomKjbId.ID = ROT00005
+ArgumentNullErrorMclMomKjbId.TYPE = Error
+ArgumentNullErrorMclMomKjbId.MSG = パラメータの企事部IDが未設定です。
+ArgumentNullErrorOriginalSystemCode.ID = ROT00006
+ArgumentNullErrorOriginalSystemCode.TYPE = Error
+ArgumentNullErrorOriginalSystemCode.MSG = パラメータの得意先コードが未設定です。
+MasterDoesNotExistEmployeeMaster.ID = ROT00007
+MasterDoesNotExistEmployeeMaster.TYPE = Error
+MasterDoesNotExistEmployeeMaster.MSG = {0}に存在しないMoM社員が設定されています。
+MasterDoesNotExistKjbMaster.ID = ROT00008
+MasterDoesNotExistKjbMaster.TYPE = Error
+MasterDoesNotExistKjbMaster.MSG = 存在しない企事部IDが設定されています。
+MasterDoesNotExistBillingCustomerMaster.ID = ROT00009
+MasterDoesNotExistBillingCustomerMaster.TYPE = Error
+MasterDoesNotExistBillingCustomerMaster.MSG = 存在しない得意先コードが設定されています。
 
 #エラーID(見積)
-ArgumentNullErrorEstimationId = Argument Null Error EstimationId
-ArgumentNullErrorEstimation = Argument Null Error Estimation
-ArgumentNullErrorEstimationApprovalRouteNode = Argument Null Error EstimationApprovalRouteNode
-EntityDoesNotExistEstimation = Entity Does Not Exist Estimation
-EntityDoesNotExistEstimationApprovalRoute = Entity Does Not Exist EstimationApprovalRoute
-EntityDoesNotExistEstimationApprovalRouteNode = Entity Does Not Exist EstimationApprovalRouteNode
-WrongNotErrorEstimationStatus = Wrong Not Error EstimationStatus
-WrongErrorEstimationStatus = Wrong Error EstimationStatus
-MustErrorEstimationSubApproverEmployee = Must Error Estimation SubApproverEmployee
-DuplicationErrorEstimationSubApproverEmployee = Duplication Error Estimation SubApproverEmployee
-NotEqualErrorEstimationApprovalRouteNodeMaster = Not Equal Error EstimationApprovalRouteNodeMaster
-LevelSuperiorErrorEstimationSubApproverOrgHierarchy = Level Superior Error Estimation SubApprover OrgHierarchy
-ApprovalAuthorityErrorEstimationSubApprover = Approval Authority Error EstimationSubApprover
+ArgumentNullErrorEstimationId.ID = RES00001
+ArgumentNullErrorEstimationId.TYPE = Error
+ArgumentNullErrorEstimationId.MSG = パラメータの見積IDが未設定です。
+ArgumentNullErrorEstimation.ID = RES00002
+ArgumentNullErrorEstimation.TYPE = Error
+ArgumentNullErrorEstimation.MSG = パラメータの見積情報が未設定です。
+ArgumentNullErrorEstimationApprovalRouteNode.ID = RES00003
+ArgumentNullErrorEstimationApprovalRouteNode.TYPE = Error
+ArgumentNullErrorEstimationApprovalRouteNode.MSG = パラメータの見積承認ルートノード情報が未設定です。
+EntityDoesNotExistEstimation.ID = RES00004
+EntityDoesNotExistEstimation.TYPE = Error
+EntityDoesNotExistEstimation.MSG = 存在しない見積IDが設定されています。
+EntityDoesNotExistEstimationApprovalRoute.ID = RES00005
+EntityDoesNotExistEstimationApprovalRoute.TYPE = Error
+EntityDoesNotExistEstimationApprovalRoute.MSG = 見積情報の承認ルート情報が未設定です。
+EntityDoesNotExistEstimationApprovalRouteNode.ID = RES00006
+EntityDoesNotExistEstimationApprovalRouteNode.TYPE = Error
+EntityDoesNotExistEstimationApprovalRouteNode.MSG = 存在しない見積承認ルートノードIDが設定されています。
+WrongNotErrorEstimationStatus.ID = RES00007
+WrongNotErrorEstimationStatus.TYPE = Error
+WrongNotErrorEstimationStatus.MSG = 見積ステータスに{0}以外が設定されています。
+WrongErrorEstimationStatus.ID = RES00008
+WrongErrorEstimationStatus.TYPE = Error
+WrongErrorEstimationStatus.MSG = 見積ステータスに{0}が設定されています。
+MustErrorEstimationSubApproverEmployee.ID = RES00009
+MustErrorEstimationSubApproverEmployee.TYPE = Error
+MustErrorEstimationSubApproverEmployee.MSG = 承認者が未設定です。
+DuplicationErrorEstimationSubApproverEmployee.ID = RES00010
+DuplicationErrorEstimationSubApproverEmployee.TYPE = Error
+DuplicationErrorEstimationSubApproverEmployee.MSG = 承認者と代理承認者に同様のユーザーが設定されています。
+NotEqualErrorEstimationApprovalRouteNodeMaster.ID = RES00011
+NotEqualErrorEstimationApprovalRouteNodeMaster.TYPE = Error
+NotEqualErrorEstimationApprovalRouteNodeMaster.MSG = 見積承認ルートに承認ルートマスタと異なるルート情報が設定されています。
+LevelSuperiorErrorEstimationSubApproverOrgHierarchy.ID = RES00012
+LevelSuperiorErrorEstimationSubApproverOrgHierarchy.TYPE = Error
+LevelSuperiorErrorEstimationSubApproverOrgHierarchy.MSG = 代理承認者に承認者より下位階層に位置するユーザーが設定されています。
+ApprovalAuthorityErrorEstimationSubApprover.ID = RES00013
+ApprovalAuthorityErrorEstimationSubApprover.TYPE = Error
+ApprovalAuthorityErrorEstimationSubApprover.MSG = 代理承認者に承認権限がないユーザーが設定されています。
 
 #エラーID(契約)
-ArgumentNullErrorContractId = Argument Null Error ContractId
-ArgumentNullErrorContract = Argument Null Error Contract
-ArgumentNullErrorContractApprovalRouteNode = Argument Null Error ContractApprovalRouteNode
-EntityDoesNotExistContract = Entity Does Not Exist Contract
-EntityDoesNotExistContractApprovalRoute = Entity Does Not Exist ContractApprovalRoute
-EntityDoesNotExistContractApprovalRouteNode = Entity Does Not Exist ContractApprovalRouteNode
-WrongNotErrorContractStatus = Wrong Not Error ContractStatus
-MustErrorContractSubApproverEmployee = Must Error Contract SubApproverEmployee
-DuplicationErrorContractSubApproverEmployee = Duplication Error Contract SubApproverEmployee
-NotEqualErrorContractApprovalRouteNodeMaster = Not Equal Error ContractApprovalRouteNodeMaster
-LevelSuperiorErrorContractSubApproverOrgHierarchy = Level Superior Error Contract SubApprover OrgHierarchy
-ApprovalAuthorityErrorContractSubApprover = Approval Authority Error ContractSubApprover
-ConditionMatchErrorEstimation = Condition Match Error Estimation
+ArgumentNullErrorContractId.ID = RCO00001
+ArgumentNullErrorContractId.TYPE = Error
+ArgumentNullErrorContractId.MSG = パラメータの契約IDが未設定です。
+ArgumentNullErrorContract.ID = RCO00002
+ArgumentNullErrorContract.TYPE = Error
+ArgumentNullErrorContract.MSG = パラメータの契約情報が未設定です。
+ArgumentNullErrorContractApprovalRouteNode.ID = RCO00003
+ArgumentNullErrorContractApprovalRouteNode.TYPE = Error
+ArgumentNullErrorContractApprovalRouteNode.MSG = パラメータの契約承認ルートノード情報が未設定です。
+EntityDoesNotExistContract.ID = RCO00004
+EntityDoesNotExistContract.TYPE = Error
+EntityDoesNotExistContract.MSG = 存在しない契約IDが設定されています。
+EntityDoesNotExistContractApprovalRoute.ID = RCO00005
+EntityDoesNotExistContractApprovalRoute.TYPE = Error
+EntityDoesNotExistContractApprovalRoute.MSG = 契約情報の承認ルート情報が未設定です。
+EntityDoesNotExistContractApprovalRouteNode.ID = RCO00006
+EntityDoesNotExistContractApprovalRouteNode.TYPE = Error
+EntityDoesNotExistContractApprovalRouteNode.MSG = 存在しない契約承認ルートノードIDが設定されています。
+WrongNotErrorContractStatus.ID = RCO00007
+WrongNotErrorContractStatus.TYPE = Error
+WrongNotErrorContractStatus.MSG = 契約ステータスに{0}以外が設定されています。
+MustErrorContractSubApproverEmployee.ID = RCO00008
+MustErrorContractSubApproverEmployee.TYPE = Error
+MustErrorContractSubApproverEmployee.MSG = 承認者が未設定です。
+DuplicationErrorContractSubApproverEmployee.ID = RCO00009
+DuplicationErrorContractSubApproverEmployee.TYPE = Error
+DuplicationErrorContractSubApproverEmployee.MSG = 承認者と代理承認者に同様のユーザーが設定されています。
+NotEqualErrorContractApprovalRouteNodeMaster.ID = RCO00010
+NotEqualErrorContractApprovalRouteNodeMaster.TYPE = Error
+NotEqualErrorContractApprovalRouteNodeMaster.MSG = 契約承認ルートに承認ルートマスタと異なるルート情報が設定されています。
+LevelSuperiorErrorContractSubApproverOrgHierarchy.ID = RCO00011
+LevelSuperiorErrorContractSubApproverOrgHierarchy.TYPE = Error
+LevelSuperiorErrorContractSubApproverOrgHierarchy.MSG = 代理承認者に承認者より下位階層に位置するユーザーが設定されています。
+ApprovalAuthorityErrorContractSubApprover.ID = RCO00012
+ApprovalAuthorityErrorContractSubApprover.TYPE = Error
+ApprovalAuthorityErrorContractSubApprover.MSG = 代理承認者に承認権限がないユーザーが設定されています。
+ConditionMatchErrorEstimation.ID = RCO00013
+ConditionMatchErrorEstimation.TYPE = Error
+ConditionMatchErrorEstimation.MSG = 既にプラン変更実施済の契約情報です。
 
 #エラーID(手配)
-ArgumentNullErrorArrangementId = Argument Null Error ArrangementId
-ArgumentNullErrorArrangementWorkId = Argument Null Error ArrangementWorkId
-ArgumentNullErrorArrangementWorkIdList = Argument Null Error ArrangementWorkIdList
-EntityDoesNotExistArrangement = Entity Does Not Exist Arrangement
-EntityDoesNotExistArrangementWork = Entity Does Not Exist ArrangementWork
-WrongNotErrorArrangementWorkStatus = Wrong Not Error ArrangementWorkStatus
-WrongErrorArrangementWorkStatus = Wrong Error ArrangementWorkStatus
-NotFoundErrorSummaryArrangementMasterList = Not Found Error SummaryArrangementMasterList
-NotFoundErrorSummaryArrangementDetailMakeInfoList = Not Found Error SummaryArrangementDetailMakeInfoList
-LackingParameterErrorArrangementWorkIdList = Lacking Parameter Error ArrangementWorkIdList
+ArgumentNullErrorArrangementId.ID = RAR00001
+ArgumentNullErrorArrangementId.TYPE = Error
+ArgumentNullErrorArrangementId.MSG = パラメータの手配IDが未設定です。
+ArgumentNullErrorArrangementWorkId.ID = RAR00002
+ArgumentNullErrorArrangementWorkId.TYPE = Error
+ArgumentNullErrorArrangementWorkId.MSG = パラメータの手配業務IDが未設定です。
+ArgumentNullErrorArrangementWorkIdList.ID = RAR00003
+ArgumentNullErrorArrangementWorkIdList.TYPE = Error
+ArgumentNullErrorArrangementWorkIdList.MSG = パラメータの手配業務IDリストが未設定です。
+EntityDoesNotExistArrangement.ID = RAR00004
+EntityDoesNotExistArrangement.TYPE = Error
+EntityDoesNotExistArrangement.MSG = 存在しない手配IDが設定されています。
+EntityDoesNotExistArrangementWork.ID = RAR00005
+EntityDoesNotExistArrangementWork.TYPE = Error
+EntityDoesNotExistArrangementWork.MSG = 存在しない手配業務IDが設定されています。
+WrongNotErrorArrangementWorkStatus.ID = RAR00006
+WrongNotErrorArrangementWorkStatus.TYPE = Error
+WrongNotErrorArrangementWorkStatus.MSG = 手配業務ステータスに{0}以外が設定されています。
+WrongErrorArrangementWorkStatus.ID = RAR00007
+WrongErrorArrangementWorkStatus.TYPE = Error
+WrongErrorArrangementWorkStatus.MSG = 手配業務ステータスに{0}が設定されています。
+NotFoundErrorSummaryArrangementMasterList.ID = RAR00008
+NotFoundErrorSummaryArrangementMasterList.TYPE = Error
+NotFoundErrorSummaryArrangementMasterList.MSG = 手配業務に紐づく手配マスタが存在しません。
+NotFoundErrorSummaryArrangementDetailMakeInfoList.ID = RAR00009
+NotFoundErrorSummaryArrangementDetailMakeInfoList.TYPE = Error
+NotFoundErrorSummaryArrangementDetailMakeInfoList.MSG = 手配業務に紐づく手配明細が存在しません。
+LackingParameterErrorArrangementWorkIdList.ID = RAR00010
+LackingParameterErrorArrangementWorkIdList.TYPE = Error
+LackingParameterErrorArrangementWorkIdList.MSG = パラメータの手配業務IDリストに手配業務IDが未設定の行があります。
 
 #エラーID(コミュニケーション)
-ArgumentNullErrorCommunication = Argument Null Error Communication
-ArgumentNullErrorTargetDocKey = Argument Null Error TargetDocKey
-ArgumentNullErrorCommunicationCategory = Argument Null Error CommunicationCategory
-DoesNotExistCommunicationCategory = Does Not Exist CommunicationCategory
-
-#エラーメッセージ(共通)
-NotEmptyErrorMsg = が未設定です。
-EmptyErrorMsg = が設定されています。
-DateReverseErrorMsg = {0}以降の日付が{1}に設定されています。
-ArgumentNullErrorMomEmployeeIdMsg = {0}のMoM社員が未設定です。
-ArgumentNullErrorMclMomKjbIdMsg = パラメータの企事部IDが未設定です。
-ArgumentNullErrorOriginalSystemCodeMsg = パラメータの得意先コードが未設定です。
-MasterDoesNotExistEmployeeMasterMsg = {0}に存在しないMoM社員が設定されています。
-MasterDoesNotExistKjbMasterMsg = 存在しない企事部IDが設定されています。
-MasterDoesNotExistBillingCustomerMasterMsg = 存在しない得意先コードが設定されています。
-
-#エラーメッセージ(見積)
-ArgumentNullErrorEstimationIdMsg = パラメータの見積IDが未設定です。
-ArgumentNullErrorEstimationMsg = パラメータの見積情報が未設定です。
-ArgumentNullErrorEstimationApprovalRouteNodeMsg = パラメータの見積承認ルートノード情報が未設定です。
-EntityDoesNotExistEstimationMsg = 存在しない見積IDが設定されています。
-EntityDoesNotExistEstimationApprovalRouteMsg = 見積情報の承認ルート情報が未設定です。
-EntityDoesNotExistEstimationApprovalRouteNodeMsg = 存在しない見積承認ルートノードIDが設定されています。
-WrongNotErrorEstimationStatusMsg = 見積ステータスに{0}以外が設定されています。
-WrongErrorEstimationStatusMsg = 見積ステータスに{0}が設定されています。
-MustErrorEstimationSubApproverEmployeeMsg = 承認者が未設定です。
-DuplicationErrorEstimationSubApproverEmployeeMsg = 承認者と代理承認者に同様のユーザーが設定されています。
-NotEqualErrorEstimationApprovalRouteNodeMasterMsg = 見積承認ルートに承認ルートマスタと異なるルート情報が設定されています。
-LevelSuperiorErrorEstimationSubApproverOrgHierarchyMsg = 代理承認者に承認者より下位階層に位置するユーザーが設定されています。
-ApprovalAuthorityErrorEstimationSubApproverMsg = 代理承認者に承認権限がないユーザーが設定されています。
-
-#エラーメッセージ(契約)
-ArgumentNullErrorContractIdMsg = パラメータの契約IDが未設定です。
-ArgumentNullErrorContractMsg = パラメータの契約情報が未設定です。
-ArgumentNullErrorContractApprovalRouteNodeMsg = パラメータの契約承認ルートノード情報が未設定です。
-EntityDoesNotExistContractMsg = 存在しない契約IDが設定されています。
-EntityDoesNotExistContractApprovalRouteMsg = 契約情報の承認ルート情報が未設定です。
-EntityDoesNotExistContractApprovalRouteNodeMsg = 存在しない契約承認ルートノードIDが設定されています。
-WrongNotErrorContractStatusMsg = 契約ステータスに{0}以外が設定されています。
-WrongErrorContractStatusMsg = 契約ステータスに{0}が設定されています。
-MustErrorContractSubApproverEmployeeMsg = 承認者が未設定です。
-DuplicationErrorContractSubApproverEmployeeMsg = 承認者と代理承認者に同様のユーザーが設定されています。
-NotEqualErrorContractApprovalRouteNodeMasterMsg = 契約承認ルートに承認ルートマスタと異なるルート情報が設定されています。
-LevelSuperiorErrorContractSubApproverOrgHierarchyMsg = 代理承認者に承認者より下位階層に位置するユーザーが設定されています。
-ApprovalAuthorityErrorContractSubApproverMsg = 代理承認者に承認権限がないユーザーが設定されています。
-ConditionMatchErrorEstimationMsg = 既にプラン変更実施済の契約情報です。
-
-#エラーメッセージ(手配)
-ArgumentNullErrorArrangementIdMsg = パラメータの手配IDが未設定です。
-ArgumentNullErrorArrangementWorkIdMsg = パラメータの手配業務IDが未設定です。
-ArgumentNullErrorArrangementWorkIdListMsg = パラメータの手配業務IDリストが未設定です。
-EntityDoesNotExistArrangementMsg = 存在しない手配IDが設定されています。
-EntityDoesNotExistArrangementWorkMsg = 存在しない手配業務IDが設定されています。
-WrongNotErrorArrangementWorkStatusMsg = 手配業務ステータスに{0}以外が設定されています。
-WrongErrorArrangementWorkStatusMsg = 手配業務ステータスに{0}が設定されています。
-NotFoundErrorSummaryArrangementMasterListMsg = 手配業務に紐づく手配マスタが存在しません。
-NotFoundErrorSummaryArrangementDetailMakeInfoListMsg = 手配業務に紐づく手配明細が存在しません。
-LackingParameterErrorArrangementWorkIdListMsg = パラメータの手配業務IDリストに手配業務IDが未設定の行があります。
-
-#エラーメッセージ(コミュニケーション)
-ArgumentNullErrorCommunicationMsg = パラメータのコミュニケーション情報が未設定です。
-ArgumentNullErrorTargetDocKeyMsg = パラメータの対象文書キーが未設定です。
-ArgumentNullErrorCommunicationCategoryMsg = パラメータのコミュニケーションカテゴリーが未設定です。
-DoesNotExistCommunicationCategoryMsg = 存在しないコミュニケーションカテゴリーが設定されています。
+ArgumentNullErrorCommunication.ID = RCM00001
+ArgumentNullErrorCommunication.TYPE = Error
+ArgumentNullErrorCommunication.MSG = パラメータのコミュニケーション情報が未設定です。
+ArgumentNullErrorTargetDocKey.ID = RCM00002
+ArgumentNullErrorTargetDocKey.TYPE = Error
+ArgumentNullErrorTargetDocKey.MSG = パラメータの対象文書キーが未設定です。
+ArgumentNullErrorCommunicationCategory.ID = RCM00003
+ArgumentNullErrorCommunicationCategory.TYPE = Error
+ArgumentNullErrorCommunicationCategory.MSG = パラメータのコミュニケーションカテゴリーが未設定です。
+DoesNotExistCommunicationCategory.ID = RCM00004
+DoesNotExistCommunicationCategory.TYPE = Error
+DoesNotExistCommunicationCategory.MSG = 存在しないコミュニケーションカテゴリーが設定されています。
 
 #フィールド名
 SortColumn = ソート項目
