--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -49,6 +49,9 @@ FileDeleteFailed.MSG = {0}の削除に失敗しました。
 FileRestoreFailed.ID = ROT00106
 FileRestoreFailed.TYPE = Fatal
 FileRestoreFailed.MSG = {0}の復元に失敗しました。
+FileReadOnlyError.ID = ROT00107
+FileReadOnlyError.TYPE = Error
+FileReadOnlyError.MSG = {0}は読み取り専用ファイルです。
 
 #エラーID(共通:パラメーター)
 ParameterEmptyError.ID = ROT00200
