添付ファイルリファレンス実装

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -52,6 +52,24 @@ FileRestoreFailed.MSG = {0}の復元に失敗しました。
 FileReadOnlyError.ID = ROT00107
 FileReadOnlyError.TYPE = Error
 FileReadOnlyError.MSG = {0}は読み取り専用ファイルです。
+FileUploadFailed.ID = ROT00108
+FileUploadFailed.TYPE = Fatal
+FileUploadFailed.MSG = {0}のアップロードに失敗しました。
+FileDownloadFailed.ID = ROT00109
+FileDownloadFailed.TYPE = Fatal
+FileDownloadFailed.MSG = {0}のダウンロードに失敗しました。
+FileInfoNotFoundError.ID = ROT00110
+FileInfoNotFoundError.TYPE = Error
+FileInfoNotFoundError.MSG = アップロード対象のファイル情報が設定されていません。
+FileExtensionNotMatchError.ID = ROT00111
+FileExtensionNotMatchError.TYPE = Error
+FileExtensionNotMatchError.MSG = アップロード対象ファイルの拡張子が設定可能な拡張子ではありません。
+FileSizeOverError.ID = ROT00112
+FileSizeOverError.TYPE = Error
+FileSizeOverError.MSG = アップロード対象ファイルの{0}が最大サイズを超えています。
+FileAttachedFileNotFoundError.ID = ROT00113
+FileAttachedFileNotFoundError.TYPE = Error
+FileAttachedFileNotFoundError.MSG = {0}対象の添付ファイル情報が存在しません。
 
 #エラーID(共通:パラメーター)
 ParameterEmptyError.ID = ROT00200
