レビューバック対応

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -28,7 +28,7 @@ MasterDoesNotExistBillingCustomerMaster.TYPE = Error
 MasterDoesNotExistBillingCustomerMaster.MSG = 存在しない得意先コードが設定されています。
 LimitOverSearchResult.ID = ROT00010
 LimitOverSearchResult.TYPE = Error
-LimitOverSearchResult.MSG = 検索結果が{0}件以上です。さらに条件を絞って検索してください。
+LimitOverSearchResult.MSG = 検索結果が上限数{0}件を超えました。さらに条件を絞って検索してください。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
