エクセル帳票出力ユーティリティ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -52,6 +52,16 @@ FileRestoreFailed.MSG = {0}の復元に失敗しました。
 FileReadOnlyError.ID = ROT00107
 FileReadOnlyError.TYPE = Error
 FileReadOnlyError.MSG = {0}は読み取り専用ファイルです。
+FileFoundError.ID = ROT00108
+FileFoundError.TYPE = Error
+FileFoundError.MSG = {0}は既に存在します。
+FileOutputFailed.ID = ROT00109
+FileOutputFailed.TYPE = Fatal
+FileOutputFailed.MSG = {0}の出力に失敗しました。
+FileMappingFailed.ID = ROT00110
+FileMappingFailed.TYPE = Fatal
+FileMappingFailed.MSG = {0}のマッピングに失敗しました。
+
 
 #エラーID(共通:パラメーター)
 ParameterEmptyError.ID = ROT00200
