レビューバック対応

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -31,7 +31,10 @@ LimitOverSearchResult.TYPE = Error
 LimitOverSearchResult.MSG = 検索結果が上限数{0}件を超えました。さらに条件を絞って検索してください。
 ExclusionCheckError.ID = ROT00011
 ExclusionCheckError.TYPE = Error
-ExclusionCheckError.MSG = 他のユーザーが更新中のため、更新できません。
+ExclusionCheckError.MSG = 他のユーザーが既に更新しています。
+UpdateTableLockError.ID = ROT00012
+UpdateTableLockError.TYPE = Error
+UpdateTableLockError.MSG = 他のユーザーが更新中のため、更新できません。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
