[Swagger修正]エラーメッセージまとめ

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -10,231 +10,131 @@ AccessLogEndInfo.TYPE = Info
 AccessLogEndInfo.MSG = Access method:{0} uri:{1} state:{2} accessor:{3} ,{4} status: {5}
 
 #エラーID(共通)
-NotEmptyError.ID = ROT00001
-NotEmptyError.TYPE = Error
-NotEmptyError.MSG = が未設定です。
-EmptyError.ID = ROT00002
-EmptyError.TYPE = Error
-EmptyError.MSG = が設定されています。
-DateReverseError.ID = ROT00003
-DateReverseError.TYPE = Error
-DateReverseError.MSG = {0}以降の日付が{1}に設定されています。
-ArgumentNullErrorMomEmployeeId.ID = ROT00004
-ArgumentNullErrorMomEmployeeId.TYPE = Error
-ArgumentNullErrorMomEmployeeId.MSG = {0}のMoM社員が未設定です。
-ArgumentNullErrorMclMomKjbId.ID = ROT00005
-ArgumentNullErrorMclMomKjbId.TYPE = Error
-ArgumentNullErrorMclMomKjbId.MSG = パラメータの企事部IDが未設定です。
-ArgumentNullErrorOriginalSystemCode.ID = ROT00006
-ArgumentNullErrorOriginalSystemCode.TYPE = Error
-ArgumentNullErrorOriginalSystemCode.MSG = パラメータの得意先コードが未設定です。
-MasterDoesNotExistEmployeeMaster.ID = ROT00007
+ParameterEmptyError.ID = ROT00001
+ParameterEmptyError.TYPE = Error
+ParameterEmptyError.MSG = パラメータ「{0}」が設定されていません。
+LimitOverSearchResult.ID = ROT00002
+LimitOverSearchResult.TYPE = Error
+LimitOverSearchResult.MSG = 検索結果件数が{0}件を超えています。検索条件を見直してください。
+CannotIdentify.ID = ROT00003
+CannotIdentify.TYPE = Error
+CannotIdentify.MSG = {0}が特定できません。
+MasterDoesNotExistApprovalRouteGrpMaster.ID = ROT00004
+MasterDoesNotExistApprovalRouteGrpMaster.TYPE = Error
+MasterDoesNotExistApprovalRouteGrpMaster.MSG = 承認ルートグループが承認ルートグループマスタに存在しません。
+ApprovalAuthorityError.ID = ROT00005
+ApprovalAuthorityError.TYPE = Error
+ApprovalAuthorityError.MSG = {0}に承認権限がありません。
+ApproverEmpDuplicationError.ID = ROT00006
+ApproverEmpDuplicationError.TYPE = Error
+ApproverEmpDuplicationError.MSG = 承認者と代理承認者が重複しています。
+NotEqualErrorApprovalRouteNodeMaster.ID = ROT00007
+NotEqualErrorApprovalRouteNodeMaster.TYPE = Error
+NotEqualErrorApprovalRouteNodeMaster.MSG = 設定されている承認ルートが正しくありません。
+MasterDoesNotExistEmployeeMaster.ID = ROT00008
 MasterDoesNotExistEmployeeMaster.TYPE = Error
 MasterDoesNotExistEmployeeMaster.MSG = {0}に存在しないMoM社員が設定されています。
-MasterDoesNotExistKjbMaster.ID = ROT00008
-MasterDoesNotExistKjbMaster.TYPE = Error
-MasterDoesNotExistKjbMaster.MSG = 存在しない企事部IDが設定されています。
-MasterDoesNotExistBillingCustomerMaster.ID = ROT00009
-MasterDoesNotExistBillingCustomerMaster.TYPE = Error
-MasterDoesNotExistBillingCustomerMaster.MSG = 存在しない得意先コードが設定されています。
-LimitOverSearchResult.ID = ROT00010
-LimitOverSearchResult.TYPE = Error
-LimitOverSearchResult.MSG = 検索結果が上限数{0}件を超えました。さらに条件を絞って検索してください。
-ExclusionCheckError.ID = ROT00011
-ExclusionCheckError.TYPE = Error
-ExclusionCheckError.MSG = 他のユーザーが既に更新しています。
-UpdateTableLockError.ID = ROT00012
-UpdateTableLockError.TYPE = Error
-UpdateTableLockError.MSG = 他のユーザーが更新中のため、更新できません。
-
-#エラーID(共通:ファイル系)
-FileNotFoundError.ID = ROT00100
-FileNotFoundError.TYPE = Error
-FileNotFoundError.MSG = {0}が存在しません。
-FileFormatError.ID = ROT00101
-FileFormatError.TYPE = Error
-FileFormatError.MSG = {0}のフォーマットが不正です。
-FileWriteError.ID = ROT00102
-FileWriteError.TYPE = Error
-FileWriteError.MSG = {0}の書き込みに失敗しました。
-FileReadError.ID = ROT00103
-FileReadError.TYPE = Error
-FileReadError.MSG = {0}の読み込みに失敗しました。
-FileCopyError.ID = ROT00104
-FileCopyError.TYPE = Error
-FileCopyError.MSG = {0}のコピーに失敗しました。
-FileDeleteError.ID = ROT00105
-FileDeleteError.TYPE = Error
-FileDeleteError.MSG = {0}の削除に失敗しました。
-FileRestoreError.ID = ROT00106
-FileRestoreError.TYPE = Error
-FileRestoreError.MSG = {0}の復元に失敗しました。
-FileReadOnlyError.ID = ROT00107
-FileReadOnlyError.TYPE = Error
-FileReadOnlyError.MSG = {0}は読み取り専用ファイルです。
-FileUploadError.ID = ROT00108
-FileUploadError.TYPE = Error
-FileUploadError.MSG = {0}のアップロードに失敗しました。
-FileDownloadError.ID = ROT00109
-FileDownloadError.TYPE = Error
-FileDownloadError.MSG = {0}のダウンロードに失敗しました。
-FileInfoNotFoundError.ID = ROT00110
-FileInfoNotFoundError.TYPE = Error
-FileInfoNotFoundError.MSG = アップロード対象のファイル情報が設定されていません。
-FileExtensionNotMatchError.ID = ROT00111
-FileExtensionNotMatchError.TYPE = Error
-FileExtensionNotMatchError.MSG = アップロード対象ファイルの拡張子が設定可能な拡張子ではありません。
-FileSizeOverError.ID = ROT00112
-FileSizeOverError.TYPE = Error
-FileSizeOverError.MSG = アップロード対象ファイルの{0}が最大サイズを超えています。
-FileAttachedFileNotFoundError.ID = ROT00113
-FileAttachedFileNotFoundError.TYPE = Error
-FileAttachedFileNotFoundError.MSG = {0}対象の添付ファイル情報が存在しません。
-FileFoundError.ID = ROT00114
-FileFoundError.TYPE = Error
-FileFoundError.MSG = {0}は既に存在します。
-FileOutputError.ID = ROT00115
-FileOutputError.TYPE = Error
-FileOutputError.MSG = {0}の出力に失敗しました。
-FileMappingError.ID = ROT00116
-FileMappingError.TYPE = Error
-FileMappingError.MSG = {0}のマッピングに失敗しました。
-
-#エラーID(共通:パラメーター)
-ParameterEmptyError.ID = ROT00200
-ParameterEmptyError.TYPE = Error
-ParameterEmptyError.MSG = パラメーター「{0}」が未設定です。
+ArgumentNullErrorMomEmployeeId.ID = ROT00009
+ArgumentNullErrorMomEmployeeId.TYPE = Error
+ArgumentNullErrorMomEmployeeId.MSG = {0}のMoM社員IDが設定されていません。
+ArgumentNullErrorTitle.ID = ROT00010
+ArgumentNullErrorTitle.TYPE = Error
+ArgumentNullErrorTitle.MSG = 件名が設定されていません。
+NotFoundErrorRequestTo.ID = ROT00011
+NotFoundErrorRequestTo.TYPE = Error
+NotFoundErrorRequestTo.MSG = 被伝達者が存在しません。
 
 #エラーID(見積)
-ArgumentNullErrorEstimationId.ID = RES00001
-ArgumentNullErrorEstimationId.TYPE = Error
-ArgumentNullErrorEstimationId.MSG = パラメータの見積IDが未設定です。
-ArgumentNullErrorEstimation.ID = RES00002
-ArgumentNullErrorEstimation.TYPE = Error
-ArgumentNullErrorEstimation.MSG = パラメータの見積情報が未設定です。
-ArgumentNullErrorEstimationApprovalRouteNode.ID = RES00003
-ArgumentNullErrorEstimationApprovalRouteNode.TYPE = Error
-ArgumentNullErrorEstimationApprovalRouteNode.MSG = パラメータの見積承認ルートノード情報が未設定です。
-EntityDoesNotExistEstimation.ID = RES00004
+EntityDoesNotExistEstimation.ID = RES00001
 EntityDoesNotExistEstimation.TYPE = Error
-EntityDoesNotExistEstimation.MSG = 存在しない見積IDが設定されています。
-EntityDoesNotExistEstimationApprovalRoute.ID = RES00005
-EntityDoesNotExistEstimationApprovalRoute.TYPE = Error
-EntityDoesNotExistEstimationApprovalRoute.MSG = 見積情報の承認ルート情報が未設定です。
-EntityDoesNotExistEstimationApprovalRouteNode.ID = RES00006
-EntityDoesNotExistEstimationApprovalRouteNode.TYPE = Error
-EntityDoesNotExistEstimationApprovalRouteNode.MSG = 存在しない見積承認ルートノードIDが設定されています。
-WrongNotErrorEstimationStatus.ID = RES00007
-WrongNotErrorEstimationStatus.TYPE = Error
-WrongNotErrorEstimationStatus.MSG = 見積ステータスに{0}以外が設定されています。
-WrongErrorEstimationStatus.ID = RES00008
-WrongErrorEstimationStatus.TYPE = Error
-WrongErrorEstimationStatus.MSG = 見積ステータスに{0}が設定されています。
-MustErrorEstimationSubApproverEmployee.ID = RES00009
-MustErrorEstimationSubApproverEmployee.TYPE = Error
-MustErrorEstimationSubApproverEmployee.MSG = 承認者が未設定です。
-DuplicationErrorEstimationSubApproverEmployee.ID = RES00010
-DuplicationErrorEstimationSubApproverEmployee.TYPE = Error
-DuplicationErrorEstimationSubApproverEmployee.MSG = 承認者と代理承認者に同様のユーザーが設定されています。
-NotEqualErrorEstimationApprovalRouteNodeMaster.ID = RES00011
-NotEqualErrorEstimationApprovalRouteNodeMaster.TYPE = Error
-NotEqualErrorEstimationApprovalRouteNodeMaster.MSG = 見積承認ルートに承認ルートマスタと異なるルート情報が設定されています。
-LevelSuperiorErrorEstimationSubApproverOrgHierarchy.ID = RES00012
-LevelSuperiorErrorEstimationSubApproverOrgHierarchy.TYPE = Error
-LevelSuperiorErrorEstimationSubApproverOrgHierarchy.MSG = 代理承認者に承認者より下位階層に位置するユーザーが設定されています。
-ApprovalAuthorityErrorEstimationSubApprover.ID = RES00013
-ApprovalAuthorityErrorEstimationSubApprover.TYPE = Error
-ApprovalAuthorityErrorEstimationSubApprover.MSG = 代理承認者に承認権限がないユーザーが設定されています。
+EntityDoesNotExistEstimation.MSG = 指定した{0}が存在しません。
+CannotEstimationAction.ID = RES00002
+CannotEstimationAction.TYPE = Error
+CannotEstimationAction.MSG = {0}以外の見積で{1}は行えません。
+CannotEstimationActionByStatus.ID = RES00003
+CannotEstimationActionByStatus.TYPE = Error
+CannotEstimationActionByStatus.MSG = {0}が{1}以外の見積で{2}は行えません。
+SlowToEstimationCancelApprovalRequest.ID = RES00004
+SlowToEstimationCancelApprovalRequest.TYPE = Error
+SlowToEstimationCancelApprovalRequest.MSG = 一度でも承認済の見積で見積承認依頼取消は行えません。
+ArgumentNullErrorRelatedId.ID = RES00005
+ArgumentNullErrorRelatedId.TYPE = Error
+ArgumentNullErrorRelatedId.MSG = 見積に対応する{0}が指定されていません。
+CannotAcceptedEstimationCancelWithoutContractCancel.ID = RES00006
+CannotAcceptedEstimationCancelWithoutContractCancel.TYPE = Error
+CannotAcceptedEstimationCancelWithoutContractCancel.MSG = ライフサイクル状態が「受注」の見積は、契約キャンセル時以外で見積キャンセルを呼び出せません。
+OriginContractDuplicationError.ID = RES00007
+OriginContractDuplicationError.TYPE = Error
+OriginContractDuplicationError.MSG = 同一変更元契約で既に{0}が存在します
+InvalidParameterError.ID = RES00008
+InvalidParameterError.TYPE = Error
+InvalidParameterError.MSG = パラメーターに不正な項目が設定されています。
+DoneReCreatedEstimationError.ID = RES00009
+DoneReCreatedEstimationError.TYPE = Error
+DoneReCreatedEstimationError.MSG =  すでに再見積されているため、見積情報 再見積が行えません。
+MismatchEstimationLifecycleStatusError.ID = RES00010
+MismatchEstimationLifecycleStatusError.TYPE = Error
+MismatchEstimationLifecycleStatusError.MSG = ライフサイクル状態が一致しません。
 
 #エラーID(契約)
-ArgumentNullErrorContractId.ID = RCO00001
-ArgumentNullErrorContractId.TYPE = Error
-ArgumentNullErrorContractId.MSG = パラメータの契約IDが未設定です。
-ArgumentNullErrorContract.ID = RCO00002
-ArgumentNullErrorContract.TYPE = Error
-ArgumentNullErrorContract.MSG = パラメータの契約情報が未設定です。
-ArgumentNullErrorContractApprovalRouteNode.ID = RCO00003
-ArgumentNullErrorContractApprovalRouteNode.TYPE = Error
-ArgumentNullErrorContractApprovalRouteNode.MSG = パラメータの契約承認ルートノード情報が未設定です。
-EntityDoesNotExistContract.ID = RCO00004
+EntityDoesNotExistContract.ID = RCO00001
 EntityDoesNotExistContract.TYPE = Error
-EntityDoesNotExistContract.MSG = 存在しない契約IDが設定されています。
-EntityDoesNotExistContractApprovalRoute.ID = RCO00005
-EntityDoesNotExistContractApprovalRoute.TYPE = Error
-EntityDoesNotExistContractApprovalRoute.MSG = 契約情報の承認ルート情報が未設定です。
-EntityDoesNotExistContractApprovalRouteNode.ID = RCO00006
-EntityDoesNotExistContractApprovalRouteNode.TYPE = Error
-EntityDoesNotExistContractApprovalRouteNode.MSG = 存在しない契約承認ルートノードIDが設定されています。
-WrongNotErrorContractStatus.ID = RCO00007
-WrongNotErrorContractStatus.TYPE = Error
-WrongNotErrorContractStatus.MSG = 契約ステータスに{0}以外が設定されています。
-MustErrorContractSubApproverEmployee.ID = RCO00008
-MustErrorContractSubApproverEmployee.TYPE = Error
-MustErrorContractSubApproverEmployee.MSG = 承認者が未設定です。
-DuplicationErrorContractSubApproverEmployee.ID = RCO00009
-DuplicationErrorContractSubApproverEmployee.TYPE = Error
-DuplicationErrorContractSubApproverEmployee.MSG = 承認者と代理承認者に同様のユーザーが設定されています。
-NotEqualErrorContractApprovalRouteNodeMaster.ID = RCO00010
-NotEqualErrorContractApprovalRouteNodeMaster.TYPE = Error
-NotEqualErrorContractApprovalRouteNodeMaster.MSG = 契約承認ルートに承認ルートマスタと異なるルート情報が設定されています。
-LevelSuperiorErrorContractSubApproverOrgHierarchy.ID = RCO00011
-LevelSuperiorErrorContractSubApproverOrgHierarchy.TYPE = Error
-LevelSuperiorErrorContractSubApproverOrgHierarchy.MSG = 代理承認者に承認者より下位階層に位置するユーザーが設定されています。
-ApprovalAuthorityErrorContractSubApprover.ID = RCO00012
-ApprovalAuthorityErrorContractSubApprover.TYPE = Error
-ApprovalAuthorityErrorContractSubApprover.MSG = 代理承認者に承認権限がないユーザーが設定されています。
-ConditionMatchErrorEstimation.ID = RCO00013
-ConditionMatchErrorEstimation.TYPE = Error
-ConditionMatchErrorEstimation.MSG = 既にプラン変更実施済の契約情報です。
+EntityDoesNotExistContract.MSG = 指定した{0}が存在しません。
+CannotContractAction.ID = RCO00002
+CannotContractAction.TYPE = Error
+CannotContractAction.MSG = {0}以外の契約で{1}は行えません。
+CannotContractActionByStatus.ID = RCO00003
+CannotContractActionByStatus.TYPE = Error
+CannotContractActionByStatus.MSG = {0}が{1}以外の契約で{2}は行えません。
+SlowToContractCancelApprovalRequest.ID = RCO00004
+SlowToContractCancelApprovalRequest.TYPE = Error
+SlowToContractCancelApprovalRequest.MSG = 一度でも承認済の契約で契約承認依頼取消は行えません。
+NotFoundErrorOriginContract.ID = RCO00005
+NotFoundErrorOriginContract.TYPE = Error
+NotFoundErrorOriginContract.MSG = 変更元の契約を取得できません。
+ArgumentNullErrorRequestOrigin.ID = RCO00006
+ArgumentNullErrorRequestOrigin.TYPE = Error
+ArgumentNullErrorRequestOrigin.MSG = 依頼者が設定されていません。
+DoneContractInfoChangeError.ID = RCO00007
+DoneContractInfoChangeError.TYPE = Error
+DoneContractInfoChangeError.MSG = すでに情報変更、契約更新されているため、契約情報変更を作成できません。
+CannotCreateContractBasedOnUnacceptedEstimation.ID = RCO00008
+CannotCreateContractBasedOnUnacceptedEstimation.TYPE = Error
+CannotCreateContractBasedOnUnacceptedEstimation.MSG = 受注済みでない見積情報をもとに契約情報は作成できません。
+DoneContractPlanChangeError.ID = RCO00009
+DoneContractPlanChangeError.TYPE = Error
+DoneContractPlanChangeError.MSG = すでに作成中のプラン変更後の契約が存在するため、プラン変更は行えません。
+MismatchContractLifecycleStatusError.ID = RCO00010
+MismatchContractLifecycleStatusError.TYPE = Error
+MismatchContractLifecycleStatusError.MSG = ライフサイクル状態が一致しません。
 
 #エラーID(手配)
-ArgumentNullErrorArrangementId.ID = RAR00001
-ArgumentNullErrorArrangementId.TYPE = Error
-ArgumentNullErrorArrangementId.MSG = パラメータの手配IDが未設定です。
-ArgumentNullErrorArrangementWorkId.ID = RAR00002
-ArgumentNullErrorArrangementWorkId.TYPE = Error
-ArgumentNullErrorArrangementWorkId.MSG = パラメータの手配業務IDが未設定です。
-ArgumentNullErrorArrangementWorkList.ID = RAR00003
-ArgumentNullErrorArrangementWorkList.TYPE = Error
-ArgumentNullErrorArrangementWorkList.MSG = パラメータの手配業務リストが未設定です。
-EntityDoesNotExistArrangement.ID = RAR00004
+EntityDoesNotExistArrangement.ID = RAR00001
 EntityDoesNotExistArrangement.TYPE = Error
-EntityDoesNotExistArrangement.MSG = 存在しない手配IDが設定されています。
-EntityDoesNotExistArrangementWork.ID = RAR00005
-EntityDoesNotExistArrangementWork.TYPE = Error
-EntityDoesNotExistArrangementWork.MSG = 存在しない手配業務IDが設定されています。
-WrongNotErrorArrangementWorkStatus.ID = RAR00006
-WrongNotErrorArrangementWorkStatus.TYPE = Error
-WrongNotErrorArrangementWorkStatus.MSG = 手配業務ステータスに{0}以外が設定されています。
-WrongErrorArrangementWorkStatus.ID = RAR00007
-WrongErrorArrangementWorkStatus.TYPE = Error
-WrongErrorArrangementWorkStatus.MSG = 手配業務ステータスに{0}が設定されています。
-NotFoundErrorSummaryArrangementMasterList.ID = RAR00008
-NotFoundErrorSummaryArrangementMasterList.TYPE = Error
-NotFoundErrorSummaryArrangementMasterList.MSG = 手配業務に紐づく手配マスタが存在しません。
-NotFoundErrorSummaryArrangementDetailMakeInfoList.ID = RAR00009
-NotFoundErrorSummaryArrangementDetailMakeInfoList.TYPE = Error
-NotFoundErrorSummaryArrangementDetailMakeInfoList.MSG = 手配業務に紐づく手配明細が存在しません。
-LackingParameterErrorArrangementWorkList.ID = RAR00010
-LackingParameterErrorArrangementWorkList.TYPE = Error
-LackingParameterErrorArrangementWorkList.MSG = パラメータの手配業務リストに手配業務情報が未設定の行があります。
-ArgumentNullErrorArrangementWork.ID = RAR00011
-ArgumentNullErrorArrangementWork.TYPE = Error
-ArgumentNullErrorArrangementWork.MSG = パラメータの手配業務情報が未設定です。
+EntityDoesNotExistArrangement.MSG = 指定した{0}が存在しません。
+CannotArrangementAction.ID = RAR00002
+CannotArrangementAction.TYPE = Error
+CannotArrangementAction.MSG = {0}以外の{1}で{2}は行えません。
+CannotArrangementActionByStatus.ID = RAR00003
+CannotArrangementActionByStatus.TYPE = Error
+CannotArrangementActionByStatus.MSG = {0}が{1}以外の{2}で{3}は行えません。
+SlowToArrangementCancelApprovalRequest.ID = RAR00004
+SlowToArrangementCancelApprovalRequest.TYPE = Error
+SlowToArrangementCancelApprovalRequest.MSG = 一度でも承認済の手配業務で手配承認依頼取消は行えません。
+RequiredApprovalError.ID = RAR00005
+RequiredApprovalError.TYPE = Error
+RequiredApprovalError.MSG = 手配承認ルートグループが設定されている手配業務の完了には承認が必要です。
+NotRequiredCompletionReportError.ID = RAR00006
+NotRequiredCompletionReportError.TYPE = Error
+NotRequiredCompletionReportError.MSG = 承認ルートがない業務で作業完了報告は行えません。
+ArrangementDuplicationError.ID = RAR00007
+ArrangementDuplicationError.TYPE = Error
+ArrangementDuplicationError.MSG = 指定された契約の{0}は既に作成されています。
 
 #エラーID(コミュニケーション)
-ArgumentNullErrorCommunication.ID = RCM00001
-ArgumentNullErrorCommunication.TYPE = Error
-ArgumentNullErrorCommunication.MSG = パラメータのコミュニケーション情報が未設定です。
-ArgumentNullErrorTargetDocKey.ID = RCM00002
-ArgumentNullErrorTargetDocKey.TYPE = Error
-ArgumentNullErrorTargetDocKey.MSG = パラメータの対象文書キーが未設定です。
-ArgumentNullErrorCommunicationCategory.ID = RCM00003
-ArgumentNullErrorCommunicationCategory.TYPE = Error
-ArgumentNullErrorCommunicationCategory.MSG = パラメータのコミュニケーションカテゴリーが未設定です。
-DoesNotExistCommunicationCategory.ID = RCM00004
-DoesNotExistCommunicationCategory.TYPE = Error
-DoesNotExistCommunicationCategory.MSG = 存在しないコミュニケーションカテゴリーが設定されています。
+EntityDoesNotExistCommunication.ID = RCM00001
+EntityDoesNotExistCommunication.TYPE = Error
+EntityDoesNotExistCommunication.MSG = 指定した{0}が存在しません。
 
 #フィールド名
 SortColumn = ソート項目
