CommonLibs最新化(ファイルアップロード・ダウンロード)

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -44,6 +44,29 @@ NotFoundErrorRequestTo.ID = ROT00011
 NotFoundErrorRequestTo.TYPE = Error
 NotFoundErrorRequestTo.MSG = 被伝達者が存在しません。
 
+#エラーID(共通:ファイル系)
+FileNotFoundError.ID = ROT00100
+FileNotFoundError.TYPE = Error
+FileNotFoundError.MSG = 指定されたファイルが存在しません。
+FileUploadError.ID = ROT00101
+FileUploadError.TYPE = Error
+FileUploadError.MSG = 指定されたファイルのアップロードに失敗しました。
+FileDownloadError.ID = ROT00102
+FileDownloadError.TYPE = Error
+FileDownloadError.MSG = 指定されたファイルのダウンロードに失敗しました。
+FileDeleteError.ID = ROT00103
+FileDeleteError.TYPE = Error
+FileDeleteError.MSG = 指定されたファイルの削除に失敗しました。
+FileInfoNotFoundError.ID = ROT00104
+FileInfoNotFoundError.TYPE = Error
+FileInfoNotFoundError.MSG = アップロード対象のファイル情報が設定されていません。
+FileExtensionNotMatchError.ID = ROT00105
+FileExtensionNotMatchError.TYPE = Error
+FileExtensionNotMatchError.MSG = アップロード対象ファイルの拡張子が設定可能な拡張子ではありません。
+FileSizeOverError.ID = ROT00106
+FileSizeOverError.TYPE = Error
+FileSizeOverError.MSG = アップロード対象ファイルの{0}が最大サイズを超えています。
+
 #エラーID(見積)
 EntityDoesNotExistEstimation.ID = RES00001
 EntityDoesNotExistEstimation.TYPE = Error
