テスト関連クラス修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -46,6 +46,15 @@ NotFoundErrorRequestTo.MSG = 被伝達者が存在しません。
 MasterDoesNotExistEmployeeMaster.ID = ROT00012
 MasterDoesNotExistEmployeeMaster.TYPE = Error
 MasterDoesNotExistKjbMaster.MSG = {0}に存在しないMoM企事部システム連携IDが設定されています。
+EntityCheckNotNullError.ID = ROT00013
+EntityCheckNotNullError.TYPE = Error
+EntityCheckNotNullError.MSG = {0}が設定されていません。
+EntityCheckStringSizeError.ID = ROT00014
+EntityCheckStringSizeError.TYPE = Error
+EntityCheckStringSizeError.MSG = {0}は最大文字数（{1}）を超えています。
+EntityCheckNumberMaxError.ID = ROT00015
+EntityCheckNumberMaxError.TYPE = Error
+EntityCheckNumberMaxError.MSG = {0}は最大値（{1}）を超えています。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
@@ -177,3 +186,13 @@ TargetDocUrl = 対象文書画面URL
 CommunicationCategory = コミュニケーションカテゴリー
 ProcessCategory = 処理カテゴリー
 CommunicationStatus = ステータス
+
+estimation = 見積
+fileKind = ファイル種類
+attachedFilePath = 添付ファイルパス
+attachedComment = コメント
+attachedEmpId = 添付者MoM社員ID
+attachedEmpName = 添付者氏名
+attachedOrgName = 添付者組織名
+attachedAt = 添付日時
+
